# talk-to-db

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  ruff.toml  slim.report.json
.github/workflows/: lint.yml
src/: connection_to_db.py  main.py
src/utils/: logger.py  model.py
